# orto_tezzi

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: build.yml  lint_test.yml
carts/: admin.py
carts/api/: routers.py  serializers.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py  0002_purchase_quantity.py  0003_purchase_gender.py  0004_alter_purchase_size.py
carts/models/: __init__.py  cart.py  purchase.py
carts/services/: __init__.py  cart_creator.py  purchase_to_cart_adder.py
carts/tests/: factories.py  test_carts.py
configs/: settings.py  urls.py
configs/management/commands/: wait_for_db.py
products/: admin.py
products/api/: filters.py  routers.py  serializers.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_product_created_at.py  0003_alter_productsize_size.py  0003_productsize_remove_product_size_product_sizes.py  0004_alter_product_gender.py
products/models/: __init__.py  product.py  product_size.py  product_type.py
products/tests/: factories.py  test_products.py
users/: admin.py
users/api/: routers.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_firebase_uid.py
users/models/: user.py
users/tests/: factories.py  test_users.py
